Backend/parser/v4langgrammar_parser.go
// Code generated from V4LangGrammar.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // V4LangGrammar

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type V4LangGrammarParser struct {
	*antlr.BaseParser
}

var V4LangGrammarParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func v4langgrammarParserInit() {
	staticData := &V4LangGrammarParserStaticData
	staticData.LiteralNames = []string{
		"", "','", "'type'", "'switch'", "'continue'", "'return'", "'case'",
		"':'", "'default'", "'-'", "'!'", "'*'", "'/'", "'+'", "'<'", "'>'",
		"'<='", "'>='", "'%'", "'=='", "'!='", "'+='", "'-='", "'*='", "'/='",
		"'&&'", "'||'", "'new'", "'++'", "'--'", "'.'", "'int'", "'bool'", "'float64'",
		"'string'", "'rune'", "'mut'", "'fmt.Println'", "'if'", "'else'", "'append'",
		"'len'", "'slices.Index'", "'strings.Join'", "'strconv.Atoi'", "'strconv.ParseFloat'",
		"'reflect.TypeOf'", "'for'", "'range'", "'break'", "'nil'", "'func'",
		"'struct'", "'{'", "'}'", "'('", "')'", "'['", "']'", "':='", "'='",
		"';'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "MUT", "PRINT", "IF", "ELSE", "APPEND", "LEN", "SLICE_INDEX",
		"JOIN", "ATOI", "PARSEFLOAT", "TYPEOF", "FOR", "RANGE", "BREAK", "NIL",
		"FUNC", "STRUCT", "L_CURLY", "R_CURLY", "L_PAREN", "R_PAREN", "L_BRACKET",
		"R_BRACKET", "DECLARE_ASSIGN", "ASSIGN", "SEMICOLON", "INT", "BOOL",
		"FLOAT", "STRING", "RUNE", "WS", "ID", "COMMENT", "MULTILINE_COMMENT",
	}
	staticData.RuleNames = []string{
		"program", "dcl", "varDcl", "funcDcl", "params", "structDcl", "structBody",
		"receiver", "sliceDcl", "sliceValues", "matrixDcl", "matrixValues",
		"statement", "elseIfStmt", "elseStmt", "switchCase", "defaultCase",
		"args", "expr", "call", "instanceValues", "type",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// V4LangGrammarParserInit initializes any static state used to implement V4LangGrammarParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewV4LangGrammarParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func V4LangGrammarParserInit() {
	staticData := &V4LangGrammarParserStaticData
	staticData.once.Do(v4langgrammarParserInit)
}

// NewV4LangGrammarParser produces a new parser instance for the optional input antlr.TokenStream.
func NewV4LangGrammarParser(input antlr.TokenStream) *V4LangGrammarParser {
	V4LangGrammarParserInit()
	this := new(V4LangGrammarParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &V4LangGrammarParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "V4LangGrammar.g4"

	return this
}

// V4LangGrammarParser tokens.
const (
	V4LangGrammarParserEOF               = antlr.TokenEOF
	V4LangGrammarParserT__0              = 1
	V4LangGrammarParserT__1              = 2
	V4LangGrammarParserT__2              = 3
	V4LangGrammarParserT__3              = 4
	V4LangGrammarParserT__4              = 5
	V4LangGrammarParserT__5              = 6
	V4LangGrammarParserT__6              = 7
	V4LangGrammarParserT__7              = 8
	V4LangGrammarParserT__8              = 9
	V4LangGrammarParserT__9              = 10
	V4LangGrammarParserT__10             = 11
	V4LangGrammarParserT__11             = 12
	V4LangGrammarParserT__12             = 13
	V4LangGrammarParserT__13             = 14
	V4LangGrammarParserT__14             = 15
	V4LangGrammarParserT__15             = 16
	V4LangGrammarParserT__16             = 17
	V4LangGrammarParserT__17             = 18
	V4LangGrammarParserT__18             = 19
	V4LangGrammarParserT__19             = 20
	V4LangGrammarParserT__20             = 21
	V4LangGrammarParserT__21             = 22
	V4LangGrammarParserT__22             = 23
	V4LangGrammarParserT__23             = 24
	V4LangGrammarParserT__24             = 25
	V4LangGrammarParserT__25             = 26
	V4LangGrammarParserT__26             = 27
	V4LangGrammarParserT__27             = 28
	V4LangGrammarParserT__28             = 29
	V4LangGrammarParserT__29             = 30
	V4LangGrammarParserT__30             = 31
	V4LangGrammarParserT__31             = 32
	V4LangGrammarParserT__32             = 33
	V4LangGrammarParserT__33             = 34
	V4LangGrammarParserT__34             = 35
	V4LangGrammarParserMUT               = 36
	V4LangGrammarParserPRINT             = 37
	V4LangGrammarParserIF                = 38
	V4LangGrammarParserELSE              = 39
	V4LangGrammarParserAPPEND            = 40
	V4LangGrammarParserLEN               = 41
	V4LangGrammarParserSLICE_INDEX       = 42
	V4LangGrammarParserJOIN              = 43
	V4LangGrammarParserATOI              = 44
	V4LangGrammarParserPARSEFLOAT        = 45
	V4LangGrammarParserTYPEOF            = 46
	V4LangGrammarParserFOR               = 47
	V4LangGrammarParserRANGE             = 48
	V4LangGrammarParserBREAK             = 49
	V4LangGrammarParserNIL               = 50
	V4LangGrammarParserFUNC              = 51
	V4LangGrammarParserSTRUCT            = 52
	V4LangGrammarParserL_CURLY           = 53
	V4LangGrammarParserR_CURLY           = 54
	V4LangGrammarParserL_PAREN           = 55
	V4LangGrammarParserR_PAREN           = 56
	V4LangGrammarParserL_BRACKET         = 57
	V4LangGrammarParserR_BRACKET         = 58
	V4LangGrammarParserDECLARE_ASSIGN    = 59
	V4LangGrammarParserASSIGN            = 60
	V4LangGrammarParserSEMICOLON         = 61
	V4LangGrammarParserINT               = 62
	V4LangGrammarParserBOOL              = 63
	V4LangGrammarParserFLOAT             = 64
	V4LangGrammarParserSTRING            = 65
	V4LangGrammarParserRUNE              = 66
	V4LangGrammarParserWS                = 67
	V4LangGrammarParserID                = 68
	V4LangGrammarParserCOMMENT           = 69
	V4LangGrammarParserMULTILINE_COMMENT = 70
)

// V4LangGrammarParser rules.
const (
	V4LangGrammarParserRULE_program        = 0
	V4LangGrammarParserRULE_dcl            = 1
	V4LangGrammarParserRULE_varDcl         = 2
	V4LangGrammarParserRULE_funcDcl        = 3
	V4LangGrammarParserRULE_params         = 4
	V4LangGrammarParserRULE_structDcl      = 5
	V4LangGrammarParserRULE_structBody     = 6
	V4LangGrammarParserRULE_receiver       = 7
	V4LangGrammarParserRULE_sliceDcl       = 8
	V4LangGrammarParserRULE_sliceValues    = 9
	V4LangGrammarParserRULE_matrixDcl      = 10
	V4LangGrammarParserRULE_matrixValues   = 11
	V4LangGrammarParserRULE_statement      = 12
	V4LangGrammarParserRULE_elseIfStmt     = 13
	V4LangGrammarParserRULE_elseStmt       = 14
	V4LangGrammarParserRULE_switchCase     = 15
	V4LangGrammarParserRULE_defaultCase    = 16
	V4LangGrammarParserRULE_args           = 17
	V4LangGrammarParserRULE_expr           = 18
	V4LangGrammarParserRULE_call           = 19
	V4LangGrammarParserRULE_instanceValues = 20
	V4LangGrammarParserRULE_type           = 21
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllDcl() []IDclContext
	Dcl(i int) IDclContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = V4LangGrammarParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = V4LangGrammarParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = V4LangGrammarParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) AllDcl() []IDclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDclContext); ok {
			len++
		}
	}

	tst := make([]IDclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDclContext); ok {
			tst[i] = t.(IDclContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Dcl(i int) IDclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDclContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(V4LangGrammarListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(V4LangGrammarListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case V4LangGrammarVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *V4LangGrammarParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, V4LangGrammarParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(47)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&-4418313327768238532) != 0) || ((int64((_la-64)) & ^0x3f) == 0 && ((int64(1)<<(_la-64))&23) != 0) {
		{
			p.SetState(44)
			p.Dcl()
		}

		p.SetState(49)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDclContext is an interface to support dynamic dispatch.
type IDclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	VarDcl() IVarDclContext
	SEMICOLON() antlr.TerminalNode
	MatrixDcl() IMatrixDclContext
	SliceDcl() ISliceDclContext
	Statement() IStatementContext
	FuncDcl() IFuncDclContext
	StructDcl() IStructDclContext

	// IsDclContext differentiates from other interfaces.
	IsDclContext()
}

type DclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDclContext() *DclContext {
	var p = new(DclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = V4LangGrammarParserRULE_dcl
	return p
}

func InitEmptyDclContext(p *DclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = V4LangGrammarParserRULE_dcl
}

func (*DclContext) IsDclContext() {}

func NewDclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DclContext {
	var p = new(DclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = V4LangGrammarParserRULE_dcl

	return p
}

func (s *DclContext) GetParser() antlr.Parser { return s.parser }

func (s *DclContext) VarDcl() IVarDclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVarDclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVarDclContext)
}

func (s *DclContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(V4LangGrammarParserSEMICOLON, 0)
}

func (s *DclContext) MatrixDcl() IMatrixDclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMatrixDclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMatrixDclContext)
}

func (s *DclContext) SliceDcl() ISliceDclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISliceDclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISliceDclContext)
}

func (s *DclContext) Statement() IStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *DclContext) FuncDcl() IFuncDclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFuncDclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFuncDclContext)
}

func (s *DclContext) StructDcl() IStructDclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStructDclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStructDclContext)
}

func (s *DclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(V4LangGrammarListener); ok {
		listenerT.EnterDcl(s)
	}
}

func (s *DclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(V4LangGrammarListener); ok {
		listenerT.ExitDcl(s)
	}
}

func (s *DclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case V4LangGrammarVisitor:
		return t.VisitDcl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *V4LangGrammarParser) Dcl() (localctx IDclContext) {
	localctx = NewDclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, V4LangGrammarParserRULE_dcl)
	var _la int

	p.SetState(74)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 7, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(50)
			p.VarDcl()
		}
		p.SetState(52)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == V4LangGrammarParserSEMICOLON {
			{
				p.SetState(51)
				p.Match(V4LangGrammarParserSEMICOLON)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(54)
			p.MatrixDcl()
		}
		p.SetState(56)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == V4LangGrammarParserSEMICOLON {
			{
				p.SetState(55)
				p.Match(V4LangGrammarParserSEMICOLON)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(58)
			p.SliceDcl()
		}
		p.SetState(60)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == V4LangGrammarParserSEMICOLON {
			{
				p.SetState(59)
				p.Match(V4LangGrammarParserSEMICOLON)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(62)
			p.Statement()
		}
		p.SetState(64)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == V4LangGrammarParserSEMICOLON {
			{
				p.SetState(63)
				p.Match(V4LangGrammarParserSEMICOLON)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(66)
			p.FuncDcl()
		}
		p.SetState(68)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == V4LangGrammarParserSEMICOLON {
			{
				p.SetState(67)
				p.Match(V4LangGrammarParserSEMICOLON)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(70)
			p.StructDcl()
		}
		p.SetState(72)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == V4LangGrammarParserSEMICOLON {
			{
				p.SetState(71)
				p.Match(V4LangGrammarParserSEMICOLON)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IVarDclContext is an interface to support dynamic dispatch.
type IVarDclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	MUT() antlr.TerminalNode
	AllID() []antlr.TerminalNode
	ID(i int) antlr.TerminalNode
	Type_() ITypeContext
	ASSIGN() antlr.TerminalNode
	Expr() IExprContext
	L_CURLY() antlr.TerminalNode
	R_CURLY() antlr.TerminalNode
	DECLARE_ASSIGN() antlr.TerminalNode

	// IsVarDclContext differentiates from other interfaces.
	IsVarDclContext()
}

type VarDclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVarDclContext() *VarDclContext {
	var p = new(VarDclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = V4LangGrammarParserRULE_varDcl
	return p
}

func InitEmptyVarDclContext(p *VarDclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = V4LangGrammarParserRULE_varDcl
}

func (*VarDclContext) IsVarDclContext() {}

func NewVarDclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VarDclContext {
	var p = new(VarDclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = V4LangGrammarParserRULE_varDcl

	return p
}

func (s *VarDclContext) GetParser() antlr.Parser { return s.parser }

func (s *VarDclContext) MUT() antlr.TerminalNode {
	return s.GetToken(V4LangGrammarParserMUT, 0)
}

func (s *VarDclContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(V4LangGrammarParserID)
}

func (s *VarDclContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(V4LangGrammarParserID, i)
}

func (s *VarDclContext) Type_() ITypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeContext)
}

func (s *VarDclContext) ASSIGN() antlr.TerminalNode {
	return s.GetToken(V4LangGrammarParserASSIGN, 0)
}

func (s *VarDclContext) Expr() IExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *VarDclContext) L_CURLY() antlr.TerminalNode {
	return s.GetToken(V4LangGrammarParserL_CURLY, 0)
}

func (s *VarDclContext) R_CURLY() antlr.TerminalNode {
	return s.GetToken(V4LangGrammarParserR_CURLY, 0)
}

func (s *VarDclContext) DECLARE_ASSIGN() antlr.TerminalNode {
	return s.GetToken(V4LangGrammarParserDECLARE_ASSIGN, 0)
}

func (s *VarDclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VarDclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VarDclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(V4LangGrammarListener); ok {
		listenerT.EnterVarDcl(s)
	}
}

func (s *VarDclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(V4LangGrammarListener); ok {
		listenerT.ExitVarDcl(s)
	}
}

func (s *VarDclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case V4LangGrammarVisitor:
		return t.VisitVarDcl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *V4LangGrammarParser) VarDcl() (localctx IVarDclContext) {
	localctx = NewVarDclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, V4LangGrammarParserRULE_varDcl)
	p.SetState(97)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
